--- a/economica.html
+++ b/economica.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Planeación del Proyecto</title>
+  <title>Celda de manufactura Robotizada</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -40,8 +40,9 @@
 
       <div class="logo">
         <h1 class="text-light"><a href="index.html"><span>Proyecto Final APM 2021-1</span></a></h1>
+        <!-- Uncomment below if you prefer to use an image logo -->
+        <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
-
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -65,58 +66,35 @@
       </nav><!-- .navbar -->
 
     </div>
-  </header>
+  </header><!-- End Header -->
 
   <main id="main">
 
-    <!-- ======= Planeación del Proyecto ======= -->
+    <!-- ======= Our Services Section =======-->
     <section class="breadcrumbs">
       <div class="container">
+
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Planeación del Proyecto</h2>
+          <h2>Evaluación económica del Proyecto</h2>
+          <ol>
+            <li><a href="index.html">Home</a></li>
+            <li>Evaluación económica del Proyecto</li>
+          </ol>
         </div>
 
       </div>
     </section>
-
-    <!-- ======= Cronograma del proyecto ======= -->
-    <div class="container" data-aos="fade-up">
-      <div class="row">
-        <div class="col-lg-6">
-          <img src="assets/img/Planeación/cronograma.png" height="80%" class="img-fluid" alt="">
-        </div>
-        <div class="col-lg-6 pt-4 pt-lg-0">
-          <h3>Cronograma del proyecto</h3>
-          <p class="fst-italic">
-            A continuación, se presenta el cronograma del proyecto realizado en la herramienta Good Day.
-          </p>
-          <p class="fst-italic">
-            GoodDay es una plataforma de gestión del trabajo que reúne las herramientas para la planificación de alto
-            nivel, la gestión de proyectos y productos, la organización de tareas y el crecimiento de la productividad.
-            GoodDay™ permite organizar y administrar la ejecución de proyectos y realizar un seguimiento a los
-            resultados
-            y los logros. Todo dentro de una plataforma.
-          </p>
-          <p class="fst-italic">
-            Se presenta a partir de un enlace el cual se actualiza cada vez que se modifica el cronograma en el
-            proyecto.
-          </p>
-        </div>
-      </div>
-
-    </div>
-
     <div class="container" data-aos="fade-up">
       <div class="section-title">
-        <h2>GoodDay Cronograma</h2>
-      </div>
-      <iframe src="https://share.goodday.work/cf354cf7-b24e-490e-8380-4f6987a85a5b" width="100%"
-        height="1000px"></iframe>
+        <h2>Evaluación económica del Proyecto.</h2>
+        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+      <br/>
+        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vR4E8H0eGV3sanX0M83GQHIv_H7dx-wBn1imCvDyjRCE7DRtYU92X6fvA1B08uG6g/pubhtml?widget=true&amp;headers=false"width="100%" height="600" scrolling="no" frameborder="0"></iframe>
     </div>
+  </div>
 
 
-
-  </main>
+  </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
   <footer id="footer" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
