--- a/planta.html
+++ b/planta.html
@@ -51,14 +51,15 @@
               <li><a href="planeacion.html">Gestión de Proyecto</a></li>
               <li><a href="planta.html">Gestión de Producción y Automatización</a></li>
               <li><a href="indu4.0.html">Automatización e Industria 4.0</a></li>
-              <li><a href="celda.html">Celda de manufactura Robotizadas</a></li>
+              <li><a href="celda.html">Celda de manufactura Robotizada</a></li>
               <li><a href="digitalf.html">Digital Factory</a></li>
               <li><a href="controladores.html">Controladores industriales (PLC)</a></li>
               <li><a href="actuadores.html">Actuadores en Automatización</a></li>
               <li><a href="scada.html">Sistema de Supervisión SCADA</a></li>
+              <li><a href="economica.html">Evaluación económica del Proyecto</a></li>
             </ul>
           </li>
-          <li><a href="team.html">Contáctanos</a></li>
+          <li><a href="team.html">Integrantes</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -66,7 +67,7 @@
     </div>
   </header><!-- End Header -->
 
-   <main id="main">
+  <main id="main">
 
     <!-- ======= Our Services Section ======= -->
     <section class="breadcrumbs">
@@ -94,7 +95,10 @@
               </div>
               <div class="card-body">
                 <h5 class="card-title"><a href="#">Urbana contrapedal</a></h5>
-                <p class="card-text">Este modelo permite practicar disciplinas deportivas como el polo en bicicleta y además andar por terrenos urbanos no muy agrestes debido a su bajo peso, su tecnología de transmisión contrapedal y la ausencia de frenos, lo cual la hace bastante atractiva para personas que deseen incursionar en este tipo de disciplina.</p>
+                <p class="card-text">Este modelo permite practicar disciplinas deportivas como el polo en bicicleta y
+                  además andar por terrenos urbanos no muy agrestes debido a su bajo peso, su tecnología de transmisión
+                  contrapedal y la ausencia de frenos, lo cual la hace bastante atractiva para personas que deseen
+                  incursionar en este tipo de disciplina.</p>
               </div>
             </div>
           </div>
@@ -105,12 +109,15 @@
               </div>
               <div class="card-body">
                 <h5 class="card-title"><a href="#">Urbana híbrida</a></h5>
-                <p class="card-text">Esta es una bicicleta capaz de andar por diferentes terrenos urbanos con facilidad debido a su sistema de cambios, su sistema de frenos y su resistencia adicional en la parte inferior del marco, lo cual la hace muy atractiva para los usuarios recurrentes de bicicleta en las ciudades.</p>
+                <p class="card-text">Esta es una bicicleta capaz de andar por diferentes terrenos urbanos con facilidad
+                  debido a su sistema de cambios, su sistema de frenos y su resistencia adicional en la parte inferior
+                  del marco, lo cual la hace muy atractiva para los usuarios recurrentes de bicicleta en las ciudades.
+                </p>
               </div>
             </div>
 
           </div>
-      </div>
+        </div>
     </section>
     <!-- ======= Why Us Section ======= -->
     <section class="why-us section-bg" data-aos="fade-up" date-aos-delay="200">
@@ -137,33 +144,33 @@
                 <li>Pedalier.</li>
                 <li>Tijera.</li>
                 <li>Punteras delanteras y traseras.</li>
-            </ul>
-            <h4 class="title">Piezas adquiridas.</h4>
-            <ul class="c3">
-              <li>Cadena.</li>
-              <li>Estrella.</li>
-              <li>Pedal.</li>
-              <li>Biela.</li>
-              <li>Cambios.</li>
-              <li>Eje pedalier.</li>
-              <li>Neumático.</li>
-              <li>Coraza.</li>
-              <li>Manzana.</li>
-              <li>Rayos.</li>
-              <li>Buje.</li>
-              <li>Freno.</li>
-              <li>Piñones.</li>
-              <li>Espaciadores.</li>
-              <li>Potencia.</li>
-              <li>Mangos.</li>
-              <li>Tapón.</li>
-              <li>Sillín.</li>
-              <li>Tija.</li>
-              <li>Control de cambios.</li>
-              <li>Control de frenos.</li>
-              <li>Manubrio.</li>
+              </ul>
+              <h4 class="title">Piezas adquiridas.</h4>
+              <ul class="c3">
+                <li>Cadena.</li>
+                <li>Estrella.</li>
+                <li>Pedal.</li>
+                <li>Biela.</li>
+                <li>Cambios.</li>
+                <li>Eje pedalier.</li>
+                <li>Neumático.</li>
+                <li>Coraza.</li>
+                <li>Manzana.</li>
+                <li>Rayos.</li>
+                <li>Buje.</li>
+                <li>Freno.</li>
+                <li>Piñones.</li>
+                <li>Espaciadores.</li>
+                <li>Potencia.</li>
+                <li>Mangos.</li>
+                <li>Tapón.</li>
+                <li>Sillín.</li>
+                <li>Tija.</li>
+                <li>Control de cambios.</li>
+                <li>Control de frenos.</li>
+                <li>Manubrio.</li>
 
-          </ul>
+              </ul>
             </div>
 
           </div>
@@ -171,6 +178,147 @@
 
       </div>
     </section>
+
+    <div class="container">
+
+      <div class="section-title" data-aos="fade-up">
+        <h1>Tecnomatix Plant Simulation</h1>
+        <hr>
+        <h2>Plantas de Producción</h2>
+        <p>adsfadfnadlfkadlgafdgadfmgfaldgdfgfbsfbsfbsf</p>
+        <div class="container" data-aos="fade-up">
+          <div class="row">
+            <div class="col-lg-6 video-box">
+              <iframe src="https://drive.google.com/file/d/14oN_FleW6gfZpB9Z0MetFzhVejyt4GuK/preview#zoom=400"
+                width="100%" height="300"></iframe>
+              <p>Planta123.</p>
+            </div>
+            <div class="col-lg-6 video-box">
+              <iframe src="https://drive.google.com/file/d/14oN_FleW6gfZpB9Z0MetFzhVejyt4GuK/preview#zoom=400"
+                width="100%" height="300"></iframe>
+              <p>Planta123.</p>
+            </div>
+            <div class="col-lg-6 video-box">
+              <iframe src="https://drive.google.com/file/d/14oN_FleW6gfZpB9Z0MetFzhVejyt4GuK/preview#zoom=400"
+                width="100%" height="300"></iframe>
+              <p>Planta123.</p>
+            </div>
+            <div class="col-lg-6 video-box">
+              <iframe src="https://drive.google.com/file/d/14oN_FleW6gfZpB9Z0MetFzhVejyt4GuK/preview#zoom=400"
+                width="100%" height="300"></iframe>
+              <p>Planta123.</p>
+            </div>
+            <div class="col-lg-6 video-box">
+              <iframe src="https://drive.google.com/file/d/14oN_FleW6gfZpB9Z0MetFzhVejyt4GuK/preview#zoom=400"
+                width="100%" height="300"></iframe>
+              <p>Planta123.</p>
+            </div>
+            <div class="col-lg-6 video-box">
+              <iframe src="https://drive.google.com/file/d/14oN_FleW6gfZpB9Z0MetFzhVejyt4GuK/preview#zoom=400"
+                width="100%" height="300"></iframe>
+              <p>Planta123.</p>
+            </div>
+          </div>
+        </div>
+
+        <hr>
+        <h2>Flujo de material</h2>
+        <p>A continuación, se muestran las estadísticas de las estaciones en las cuales se tiene un porcentaje de tiempo
+          de trabajo mayor por lo cual pueden estar produciendo cuellos de botella en el proceso de producción.</p>
+
+        <div class="row">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up">
+            <div class="icon-box icon-box-green">
+              <img src="assets/img/PlantSimu/chart1.PNG" class="img-fluid" alt="">
+              <h4 class="title">GENERADOR DE OXÍGENO</h4>
+              <p class="description">Previo a la fabricación de la bicicleta se hace necesario la plantación del bambú,
+                este genera 30% más oxígeno que los árboles ayudadno a reducir el exceso de CO2 que existe en la
+                atmósfera.</p>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+            <div class="icon-box icon-box-green">
+              <img src="assets/img/PlantSimu/chart2.PNG" class="img-fluid" alt="">
+              <h4 class="title">RESISTENTE Y LIGERA</h4>
+              <p class="description">El bambú es más fuerte que el acero en lo que respecta a la resistencia a la
+                tracción. El acero tiene una resistencia a la tracción de 23.000 libras por pulgada cuadrada, mientras
+                que el bambú supera al acero con un valor de 28.000 libras por pulgada. </p>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+            <div class="icon-box icon-box-green">
+              <img src="assets/img/PlantSimu/chart3.PNG" class="img-fluid" alt="">
+              <h4 class="title">RAPIDEZ EN CRECIMIENTO</h4>
+              <p class="description">En solo 3 años el bambú alcanza su madurez, otras maderas tardan entre 15 y 25
+                años, como el pino. Esto hace del bambú un recurso altamente renovable.</p>
+            </div>
+          </div>
+        </div>
+        <hr>
+        <h2>Comparación de producción</h2>
+        <p>dafabsdfkasdfasdfasdfasdfsadfads</p>
+        <img src="assets/img/PlantSimu/Tabla.PNG" class="img-fluid" alt="">
+        <p>dafabsdfkasdfasdfasdfasdfsadfads</p>
+
+
+        <hr>
+        <h2>VSM</h2>
+        <p>dafabsdfkasdfasdfasdfasdfsadfads</p>
+        <iframe src="https://drive.google.com/file/d/14oN_FleW6gfZpB9Z0MetFzhVejyt4GuK/preview#zoom=400"width="100%" height="400"></iframe>
+        <p>dafabsdfkasdfasdfasdfasdfsadfads</p>
+
+        <br/>
+        <div class="row">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up">
+            <div class="icon-box icon-box-green">
+              <img src="assets/img/PlantSimu/chart1.PNG" class="img-fluid" alt="">
+              <h4 class="title">GENERADOR DE OXÍGENO</h4>
+              <p class="description">Previo a la fabricación de la bicicleta se hace necesario la plantación del bambú,
+                este genera 30% más oxígeno que los árboles ayudadno a reducir el exceso de CO2 que existe en la
+                atmósfera.</p>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+            <div class="icon-box icon-box-green">
+              <img src="assets/img/PlantSimu/chart2.PNG" class="img-fluid" alt="">
+              <h4 class="title">RESISTENTE Y LIGERA</h4>
+              <p class="description">El bambú es más fuerte que el acero en lo que respecta a la resistencia a la
+                tracción. El acero tiene una resistencia a la tracción de 23.000 libras por pulgada cuadrada, mientras
+                que el bambú supera al acero con un valor de 28.000 libras por pulgada. </p>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+            <div class="icon-box icon-box-green">
+              <img src="assets/img/PlantSimu/chart3.PNG" class="img-fluid" alt="">
+              <h4 class="title">RAPIDEZ EN CRECIMIENTO</h4>
+              <p class="description">En solo 3 años el bambú alcanza su madurez, otras maderas tardan entre 15 y 25
+                años, como el pino. Esto hace del bambú un recurso altamente renovable.</p>
+            </div>
+          </div>
+        </div>
+
+        <br/>
+        <div class="container" data-aos="fade-up">
+          <div class="row">
+            <div class="col-lg-6 video-box">
+              <img src="assets/img/PlantSimu/chart3.PNG" class="img-fluid" alt="">
+              <p>Planta123.</p>
+            </div>
+            <div class="col-lg-6 video-box">
+              <p>Planta123.</p>
+            </div>
+          </div>
+        </div>
+        <hr>
+        <h2>MES</h2>
+        <p>dafabsdfkasdfasdfasdfasdfsadfads</p>
+      </div>
+
+      </section>
 
   </main><!-- End #main -->
 
