--- a/planta.html
+++ b/planta.html
@@ -278,24 +278,18 @@
 
         <hr>
         <h2>VSM</h2>
+
         <p>El diagrama VSM es  permite visualizar todo el proceso, en donde se observa tanto el flujo de información como de materiales necesarios para que un producto, en este caso, tanto la Bicicleta Urbana como la Bicicleta Hibrida, desde los proveedores hasta la  llegada al cliente, adicionalmente permite observar las actividades que no agregan valor al proceso para posteriormente iniciar las actividades necesarias para eliminarlas.</p>
         <iframe src="https://drive.google.com/file/d/1ZG1sUa5ajdDpbLxFMmN_A2cPZQhhhpRN/preview"width="100%" height="400"></iframe>
         <iframe src="https://drive.google.com/file/d/1Zbfyy_qKClTHTztZXt7sROnu04yu1HJ8/preview"width="100%" height="400"></iframe>
         <p>A continuación, se presentan los tiempos de producción de 3 bicicletas por día, tanto para la referencia de Bicicleta Urbana como Hibrida,Cabe destacar que se realizo una prueba a la planta durante 30 días para evaluar si estos tiempos se mantenían de forma apropiada. Adicionalmente los tiempos correspondientes a la producción de una bicicleta de cada referencia, donde se evidencia que fracción del tiempo permite adicionar valor, que fracción se emplea en transporte y en tiempos de espera.</p>
 
         <br/>
-        <div class="row">
+        <div class="row justify-content-md-center">
           <div class="col-lg-5 col-md-6 d-flex align-items-stretch" data-aos="fade-up">
             <div class="icon-box icon-box-green">
               <img src="assets/img/PlantSimu/Hibrida_time.PNG" class="img-fluid" alt="">
               <h4 class="title">Tiempo de Producción 3 Bicicletas Diarias- Referencia Hibrida</h4>
-            </div>
-          </div>
-
-          <div class="col-lg-5 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon-box icon-box-green">
-              <img src="assets/img/PlantSimu/Hibrida_graph.PNG" class="img-fluid" alt="">
-              <h4 class="title">Tiempo referentes a produccion 1 Bicicleta- Referencia Hibrida</h4>
             </div>
           </div>
 
@@ -305,6 +299,14 @@
               <h4 class="title">Tiempo de Producción 3 Bicicletas Diarias- Referencia Urbana</h4>
             </div>
           </div>
+
+          <div class="col-lg-5 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+            <div class="icon-box icon-box-green">
+              <img src="assets/img/PlantSimu/Hibrida_graph.PNG" class="img-fluid" alt="">
+              <h4 class="title">Tiempo referentes a produccion 1 Bicicleta- Referencia Hibrida</h4>
+            </div>
+          </div>
+          
           <div class="col-lg-5 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="icon-box icon-box-green">
               <img src="assets/img/PlantSimu/Urbana_graph.PNG" class="img-fluid" alt="">
@@ -312,12 +314,12 @@
             </div>
           </div>
         </div>
+        <hr>
+        <h2>MES</h2>
+        <p>Se eligió Odoo como herramienta computacional para la implementación del sistema MES principalmente por su flexibilidad. En lugar de adquirir un paquete completo, Odoo nos permite elegir los módulos que vamos a implementar para mejorar nuestro sistema de gestión y por aparte cobra licencias por su uso, de acuerdo al número de trabajadores e independientemente de su rango en la empresa. Esta modalidad de servicio trae como beneficios una reducción de costos y evitar la adquisición de herramientas que no se utilizarán.</p>
+        <img src="assets/img/PlantSimu/herramienta.jpeg" class="img-fluid" alt="">
+        </section>
       </div>
-      <hr>
-      <h2>MES</h2>
-      <p>Se eligió Odoo como herramienta computacional para la implementación del sistema MES principalmente por su flexibilidad. En lugar de adquirir un paquete completo, Odoo nos permite elegir los módulos que vamos a implementar para mejorar nuestro sistema de gestión y por aparte cobra licencias por su uso, de acuerdo al número de trabajadores e independientemente de su rango en la empresa. Esta modalidad de servicio trae como beneficios una reducción de costos y evitar la adquisición de herramientas que no se utilizarán.</p>
-      <img src="assets/img/PlantSimu/herramienta.jpeg" class="img-fluid" alt="">
-      </section>
 
   </main><!-- End #main -->
 
