--- a/team.html
+++ b/team.html
@@ -89,7 +89,7 @@
         <div  class="row justify-content-md-center">
           
 
-          <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
                 <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
@@ -108,7 +108,7 @@
             </div>
           </div>
 
-          <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
                 <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
@@ -127,26 +127,23 @@
             </div>
           </div>
 
-          <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/Angel.jpg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://www.linkedin.com/in/angel-diaz-aa2683208/"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
                 <h4>Ángel Esteban Díaz Sarmiento</h4>
                 <span>CTO</span>
-                <p>Ut enim possimus nihil cupiditate beatae. Veniam facere quae non qui necessitatibus rerum eos vero. Maxime sit sunt quo dolor autem est qui quaerat aliquid. Tenetur possimus qui enim.</p>
+                <p>Dentro de mis tareas asignadas por el equipo fue el diseño de la planta sin automatizar en Plant Simulation. A partir de discusiones en grupo acordamos especificaciones de cómo queríamos que fuera la planta sobre la cual vamos a trabajar para el proyecto y para esto ha sido necesario mantener constante comunicación entre los integrantes para llegar a acuerdos y estar en sintonía sobre el desarrollo del proyecto. Considero que precisamente la comunicación junto con el compromiso son un aspecto crítico a la hora de obtener buenos resultados, dado que la comunicación nos permite transmitir ideas, inconformidades o dudas respecto al desarrollo del proyecto. Por lo cual mejorar este aspecto será de gran ayuda para mejorar los aportes individuales y finalmente obtener resultados óptimos.</p>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
                 <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
@@ -159,27 +156,22 @@
               </div>
               <div class="member-info">
                 <h4>Sergio Esteban Quintero Benavides</h4>
-                <span>Accountant</span>
                 <p>Sint qui cupiditate. Asperiores fugit impedit aspernatur et mollitia. Molestiae qui placeat labore assumenda id qui nesciunt quo reprehenderit. Rem dolores similique quis soluta culpa enim quia ratione ea.</p>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/team-5.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/Felipe.jpg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://www.linkedin.com/in/feliperomers/"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
                 <h4>Juan Felipe Romero Sanabria</h4>
-                <span>Marketing</span>
-                <p>Aut ex esse explicabo quia harum ea accusamus excepturi. Temporibus at quia quisquam veritatis impedit. Porro laborum voluptatum sed necessitatibus a saepe. Deserunt laborum quasi consequatur voluptatum iusto sint qui fuga vel. Enim eveniet sed quibusdam rerum in. Non dicta architecto consequatur quo praesentium nesciunt.</p>
+                <p>Dentro de mis tareas asignadas por el equipo fue el coordinar la elaboración de la página web de GitHub y del repositorio del proyecto, además de diseño del diagrama de flujo de valor.  El uso de plataformas como GitHub ha facilitado la comunicación y la entrega de avances de manera oportuna siendo un factor esencial permitiendo el registro de actividades y hacer control de versiones. Entre las mayores dificultades se encuentra el uso y aprendizaje de la librería “ValueStreamMapping” de PlantSimulation .</p>
               </div>
             </div>
           </div>
