--- a/planta.html
+++ b/planta.html
@@ -189,34 +189,34 @@
         <div class="container" data-aos="fade-up">
           <div class="row">
             <div class="col-lg-6 video-box">
-              <iframe src="https://drive.google.com/file/d/14oN_FleW6gfZpB9Z0MetFzhVejyt4GuK/preview#zoom=400"
+              <iframe src="https://drive.google.com/file/d/1R343qPW4L9ae5v-1ddD60ebfD2-Ygo1p/preview"
                 width="100%" height="300"></iframe>
-              <p>Planta123.</p>
+              <p>Planta Bicicleta Hibrida.</p>
             </div>
             <div class="col-lg-6 video-box">
-              <iframe src="https://drive.google.com/file/d/14oN_FleW6gfZpB9Z0MetFzhVejyt4GuK/preview#zoom=400"
+              <iframe src="https://drive.google.com/file/d/1RHIskOMLOwDLD9zGI-eFzLMC2SKCQAo9/preview"
                 width="100%" height="300"></iframe>
-              <p>Planta123.</p>
+              <p>Planta Bicicleta Urbana.</p>
             </div>
             <div class="col-lg-6 video-box">
-              <iframe src="https://drive.google.com/file/d/14oN_FleW6gfZpB9Z0MetFzhVejyt4GuK/preview#zoom=400"
+              <iframe src="https://drive.google.com/file/d/1RFPSAC-AZVWvLIcjRUyMVnX4ZfZfDeM2/preview"
                 width="100%" height="300"></iframe>
-              <p>Planta123.</p>
+              <p>Planta Bicicleta Hibrida Lugs.</p>
             </div>
             <div class="col-lg-6 video-box">
-              <iframe src="https://drive.google.com/file/d/14oN_FleW6gfZpB9Z0MetFzhVejyt4GuK/preview#zoom=400"
+              <iframe src="https://drive.google.com/file/d/1ROrbBUTENq4u2X4BSTEP6vneNGWgksex/preview"
                 width="100%" height="300"></iframe>
-              <p>Planta123.</p>
+              <p>Planta Bicicleta Urbana Lugs.</p>
             </div>
             <div class="col-lg-6 video-box">
-              <iframe src="https://drive.google.com/file/d/14oN_FleW6gfZpB9Z0MetFzhVejyt4GuK/preview#zoom=400"
+              <iframe src="https://drive.google.com/file/d/1RH19-sSioDPpgQ_pYNFl83wGjplDF6t6/preview"
                 width="100%" height="300"></iframe>
-              <p>Planta123.</p>
+              <p>Planta Bicicleta Hibrida Lugs Unificada.</p>
             </div>
             <div class="col-lg-6 video-box">
-              <iframe src="https://drive.google.com/file/d/14oN_FleW6gfZpB9Z0MetFzhVejyt4GuK/preview#zoom=400"
+              <iframe src="https://drive.google.com/file/d/1RRnLrdCjs6kVGIZliZCE90v3I_Bvxwb5/preview"
                 width="100%" height="300"></iframe>
-              <p>Planta123.</p>
+              <p>Planta Bicicleta Urbana Lugs Unificada.</p>
             </div>
           </div>
         </div>
